# QPL

./: .gitignore  README.md  pyproject.toml  requirements.txt
H2+/: MLP.py  QuantumNetwork.py  test.py  train.py  utils.py
H2+/Results/: alpha_validation_data.npy  train_data.npy  validation_data.npy
examples/H2/: EnergyLoss.py  QuantumNetwork.py  isosurface.py  sampleBatch.py  test.py  train.py  train_lbfgs.py
examples/H2+/: QuantumLoss.py  QuantumNetwork.py  sampleBatch.py  test.py  train.py
examples/H2+/Results/: alpha_train_data.npy  orbital_train_data.npy  orbital_validation_data.npy
src/qlp/: embedding.py  isosurface.py
